First shot at adding IIC bindkey documentation.

--- a/magic-cheatsheet/magic_cheatsheet.tex
+++ b/magic-cheatsheet/magic_cheatsheet.tex
@@ -83,7 +83,6 @@
 		\key{d} & \mac{delete} selection\\
 		\key{CTRL-D} & delete all layers and labels in box selected by cursor\\
 		\key{e} & makes the selected cell the new \mac{edit} cell\\
-		\key{f} & flip the selection sideways\\
 		\key{F} & flip the selection upside-down\\
 		\key{g} & toggle \mac{grid}\\
 		\key{G} & toggle \mac{grid 2}\\
@@ -127,6 +126,29 @@
 
 	\newpage
 	
+        \begin{tabular}{p{0.3\textwidth}p{0.7\textwidth}}
+                \toprule
+		\multicolumn{2}{l}{Bind keys (IIC add-on):}\\
+                \midrule
+                \key{f} & full layout view\\
+                \key{CTRL-F} & flip the selection sideways\\
+                \key{k} & measure (ruler)\\
+                \key{K} & remove rulers\\
+                \key{p} & draw a wiring path\\
+                \key{q} & open poperty dialog of p-cell\\
+                \key{?} & show what is contained in box\\
+                \key{0} & show locali\\
+                \key{!} & show metal-1\\
+                \key{@} & show metal-2\\
+                \key{\#} & show metal-3\\
+                \key{\$} & show metal-4\\
+                \key{\%} & show metal-5\\
+                \key{9} & show all layers\\
+                \bottomrule
+        \end{tabular}
+
+	\newpage
+
 	\begin{tabular}{p{0.3\textwidth}p{0.7\textwidth}}
 		\toprule
 		\multicolumn{2}{l}{Mouse operations:}\\
