Added select short macro.

--- a/magic-cheatsheet/magic_cheatsheet.tex
+++ b/magic-cheatsheet/magic_cheatsheet.tex
@@ -62,6 +62,7 @@
 		\mac{see} \mac{[no]} \argu{layers} & show or hide comma-separated list of \argu{layers}\\
 		\mac{see} \mac{[no]} \mac{*} & show or hide all layers\\
 		\mac{select save} \argu{file} & Save selection as new \argu{file}.mag\\
+		\mac{select short} \argu{label1} \argu{label2} & Find the path that electrically connects (shorts) the nodes labeled \argu{label1} and \argu{label2}.\\
 		\mac{straighten} \argu{dir} & try to repair jogs by pulling in \argu{dir}ection\\
 		\mac{tool} & changes the currently used \mouse{tool} to (box, wiring, netlist, pick)\\
 		\mac{redraw} & redraws the window\\
