--- a/magic-cheatsheet/magic_cheatsheet.tex
+++ b/magic-cheatsheet/magic_cheatsheet.tex
@@ -70,6 +70,7 @@
 		\mac{load} \argu{cell} & open the \argu{cell} in the layout window\\
 		\mac{macro} [\argu{window\_type}] [\argu{key} [\argu{value}]] & new macro definition \\
 		\mac{measure} [\mac{hor}|\mac{ver}|\mac{auto}] & create a ruler in the box\\
+		\mac{move} \argu{x} \argu{y} & \mac{move} the selection to the \argu{x},\argu{y} coordinate, or relative by specifying direction and distance; parameters are in lambda or in \argu{um}\\
 		\mac{paint} \argu{layers} & paint the comma-separated list of \argu{layers} in box\\
 		\mac{plow} \argu{dir} & move layout structures incl. connectivity in \argu{dir}ection, see manual\\
 		\mac{port make} & create a port from selected label\\
