--- a/magic-cheatsheet/magic_cheatsheet.tex
+++ b/magic-cheatsheet/magic_cheatsheet.tex
@@ -47,8 +47,12 @@
 		\multicolumn{2}{l}{Useful commands:}\\
 		\midrule
 		\mac{addpath} [\argu{path}] & add search \argu{path} of cells\\
+		\mac{antennacheck} & run antenna check on cell\\
 		\mac{array} \argu{xsize} \argu{ysize} & array the selection \argu{xsize}-times in X, \argu{ysize}-times in Y, spacing by box\\
+		\mac{box} [\argu{options}] & print information about the box like \key{b}, or manipulate it in various ways\\
+		\mac{cif} [\argu{options}] & powerful command with various options (like generating mask layers, calculate density, etc.). Consult online help.\\
 		\mac{contact} \argu{type} & create contact inside box of intersecting layers\\
+		\mac{copy} [\argu{to x y}] & \mac{copy} to current cursor position or to \argu{x}/\argu{y}-position\\
 		\mac{corner} \argu{dir1} \argu{dir2} & draws a corner inside box, first in \argu{dir1}, then in \argu{dir2} (cf.~\mac{fill})\\
 		\mac{drc} \mac{find} & locate DRC error\\
 		\mac{drc} \mac{why} & explain DRC errors in box\\
@@ -63,11 +67,19 @@
 		\mac{flatten} \argu{cell} & flatten the current edit cell incl. hierarchy into a new \argu{cell}\\
 		\mac{flush} & revert edit cell to last state on disk\\
 		\mac{get} \argu{cell} & instantiate \argu{cell} into current edit cell\\
+		\mac{goto} \argu{nodename} & move box to net \argu{nodename}, throw error if not existing\\
 		\mac{help} [\argu{pattern}] & shows help for various commands\\
 		\mac{identify} \argu{cell-id} & name the selected cell as \argu{cell-id}\\
 		\mac{iroute} & interactive point-to-point router, from cursor to box\\
 		\mac{label} \argu{string} [\argu{position} [\argu{layer}]] & create a point, line or box label\\
 		\mac{load} \argu{cell} & open the \argu{cell} in the layout window\\
+		\bottomrule
+	\end{tabular}
+	\newpage
+	\begin{tabular}{p{0.3\textwidth}p{0.7\textwidth}}
+		\toprule
+		\multicolumn{2}{l}{Useful commands (cont'd):}\\
+		\midrule
 		\mac{macro} [\argu{window\_type}] [\argu{key} [\argu{value}]] & new macro definition \\
 		\mac{measure} [\mac{hor}|\mac{ver}|\mac{auto}] & create a ruler in the box\\
 		\mac{move} \argu{x} \argu{y} & \mac{move} the selection to the \argu{x},\argu{y} coordinate, or relative by specifying direction and distance; parameters are in lambda or in \argu{um}\\
@@ -113,8 +125,8 @@
 		\key{CTRL-I} & deselect instance under cursor\\
 		\key{m} & \mac{move} selection to cursor position\\
 		\key{o} & \mac{openwindow} (with current selection)\\
-		\key{r} & \mac{rotate} 90\\
-		\key{R} & \mac{rotate} -90\\
+		\key{r} & \mac{rotate} 90~degree\\
+		\key{R} & \mac{rotate} -90~degree\\
 		\key{s} & \mac{select} objects under cursor\\
 		\key{S} & \mac{select} additional objects under cursor\\
 		\key{CTRL-S} & deselect objects under cursor\\
