--- a/magic-cheatsheet/magic_cheatsheet.tex
+++ b/magic-cheatsheet/magic_cheatsheet.tex
@@ -84,6 +84,7 @@
 		\mac{measure} [\mac{hor}|\mac{ver}|\mac{auto}] & create a ruler in the box\\
 		\mac{move} \argu{x} \argu{y} & \mac{move} the selection to the \argu{x},\argu{y} coordinate, or relative by specifying direction and distance; parameters are in lambda or in \argu{um}\\
 		\mac{paint} \argu{layers} & paint the comma-separated list of \argu{layers} in box\\
+		\mac{plot} \argu{type} \argu{filename} & plots a layout, either as \argu{pnm} or \argu{svg} type\\
 		\mac{plow} \argu{dir} & move layout structures incl. connectivity in \argu{dir}ection, see manual\\
 		\mac{port make} & create a port from selected label\\
 		\mac{port index} \argu{number} & assign a port index (must match the number from schematic)\\ 
